--- a/home/home/settings.py.sample
+++ b/home/home/settings.py.sample
@@ -25,18 +25,21 @@ SECRET_KEY = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 # SECURITY WARNING: don't run with debug turned on in production!
 DEBUG = True
 
-ALLOWED_HOSTS = []
+ALLOWED_HOSTS = ['127.0.0.1']
 
 
 # Application definition
 
 INSTALLED_APPS = [
+    'devices.apps.DeviceConfig',
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
     'django.contrib.sessions',
     'django.contrib.messages',
     'django.contrib.staticfiles',
+    'django.contrib.sites',
+    'mypages',
 ]
 
 MIDDLEWARE = [
@@ -75,12 +78,25 @@ WSGI_APPLICATION = 'home.wsgi.application'
 # Database
 # https://docs.djangoproject.com/en/4.1/ref/settings/#databases
 
+# DATABASES = {
+#     'default': {
+#         'ENGINE': 'django.db.backends.sqlite3',
+#         'NAME': BASE_DIR / 'db.sqlite3',
+#     }
+# }
 DATABASES = {
-    'default': {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': BASE_DIR / 'db.sqlite3',
-    }
-}
+        'default': {
+             'ENGINE': 'django.db.backends.mysql',
+             'NAME': 'smarthome',
+             'USER': 'root',
+             'PASSWORD': 'masaki-s',
+             'HOST': 'localhost',
+             'PORT': '3306',
+             'OPTIONS': {
+                'charset': 'utf8mb4',
+             },
+             }
+         }
 
 
 # Password validation
